Fix pagination overflow

--- a/public/stylesheet/sass/components/pagination.scss
+++ b/public/stylesheet/sass/components/pagination.scss
@@ -1,6 +1,7 @@
 .pagination {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 2rem;
   justify-content: center;
 }
