--- a/public/stylesheet/sass/main.css
+++ b/public/stylesheet/sass/main.css
@@ -97,6 +97,7 @@ a {
 .pagination {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 2rem;
   justify-content: center; }
 
